# npm-registry-time-machine

./: .gitignore  README.md  howto.txt
js/: README.md  index.js  package.json
python/: LICENSE  README.md  pyproject.toml
python/npm_registry_time_machine/: __main__.py
