[build-system]
requires = ["setuptools>=58.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "npm-registry-time-machine"
version = "1.0.9"
authors = [
  { name="Alexandr Gusev", email="alphacity@yandex.ru" },
]
description = "Proxy for limiting the release dates of packages"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "npm",
    "registry",
    "time-machine"
]
dependencies = [
    "aiohttp >= 3.8.5",
    "aiohttp_requests >= 0.2.2"
]
requires-python = ">=3.9.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Alexandr-Gusev/npm-registry-time-machine"

[project.scripts]
npm-registry-time-machine = "npm_registry_time_machine.__main__:main"
